* Fix potential crash in WidgetTabControl when trying to set an active tab when there is no tab already active.
* Fix unintended file appending when loading mod metadata
* Fix potential crash when tileset image can't be loaded.
* Fix bonuses to primary stats being incorrectly assigned when arbitrary resource stats are used.

Translation updates:

* Polish (pl) update (Marcin Serwin)
* Russian (ru) update (berry)



Flare v1.14 (https://flarerpg.org/2022/12/10/flare-1-14/)

Engine features:

* Added 'loot.requires_status' and 'status_loot' properties to loot table definitions.
* Support '/' as shorthand for 'exec' in the dev console. A space is not required after the slash.
* Added 'spawn_level' property to map enemies. This follows the same syntax as the Power property of the same name.
* Add XP scaling tables for scaling enemy reward XP based on enemy level.
* Replace 'immunity' effects with percentage-based resistances.
* Added 'mouse_move_deadzone' property to engine/misc.txt to help alleviate erratic mouse-move behavior when the cursor is near the player.
* Alternative tab UI for when tabs exceed the available space.
* Added keybind for cycling equipment sets in reverse.
* Refactored stats and stat bonuses to use floats for fractional values.
* Support fractional values in the following:
  * Combat text: 'speed'
  * Engine (combat): 'absorb_percent', 'resist_percent', 'block_percent', 'avoidance_percent', 'miss_damage_percent', 'crit_damage_percent', 'overhit_damage_percent'
  * Engine (misc): 'party_exp_percentage'
  * Events: 'power_damage', 'chance_exec'
  * Death penalty: 'currency', 'xp_total', 'xp_current_level'
  * Item: 'dmg', 'abs', 'bonus'
  * Map: 'enemygroup.chance'
  * Power: 'requires_mp', 'requires_hp', 'requires_hpmp_state', 'attack_speed', 'hp_steal', 'mp_steal', 'missile_angle', 'angle_variance', 'post_effect', 'post_effect_src', 'pre_power', 'modifier_accuracy', 'modifier_damage', 'modifier_critical'