@@ -7,6 +7,7 @@ Engine fixes:
 * Fix unintended file appending when loading mod metadata
 * Fix potential crash when tileset image can't be loaded.
 * Fix bonuses to primary stats being incorrectly assigned when arbitrary resource stats are used.
+* Fix leaked effect animations when an effect's animation property was redefined.
 
 Translation updates:
 
